[feature]added new filter toolbar, using vFolder search capability instead of table-model, moved Ifolder, foldercommand, foldercommandreference, and all filter/filteractions code in core package